<resources>
    <string name="app_name">Статистика</string>
    <string name="authorization">Авторизация</string>
    <string name="graph">Графики</string>
    <string name="user">Пользователь</string>
    <string name="admin">Администатор</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="registration">Регистрация</string>
    <string name="forget_password">Забыл пароль?</string>
    <string name="forget_me">Забыть меня</string>
    <string name="enter">Войти</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="exit">выйти</string>
    <string name="total_statistics">Общая статистика</string>
    <string name="daily_statistics">Ежедевная статистика</string>
    <string name="settings">Настройки</string>
    <string name="catalogs">Справочники</string>
    <string name="persons">Личности</string>
    <string name="keywords">Ключевые слова</string>
    <string name="sites">Сайты</string>
    <string name="add">Добавить</string>
    <string name="edit">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="need_select">Сначала выберите элемент списка</string>
    <string name="site">Сайт:</string>
    <string name="name">Имя</string>
    <string name="count_mentions">Количество упоминаний</string>
    <string name="person">Личность:</string>
    <string name="period_from">Период с</string>
    <string name="to">по</string>
    <string name="date">Дата</string>
    <string name="total_for_period">Всего за период:</string>
    <string name="address_to_service">Адрес к сервису</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="change_password">Сменить пароль</string>
    <string name="error">Ошибка:</string>
    <string name="timeout_error">Не удалось подключиться к сервису</string>
    <string name="not_found">Не найдено</string>
    <string name="server_error">Внутренняя ошибка сервера</string>
    <string name="unknown_error">Неизвестная ошибка</string>
</resources>
