<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_total"
            android:icon="@drawable/ic_total"
            android:title="@string/total_statistics" />
        <item
            android:id="@+id/nav_daily"
            android:icon="@drawable/ic_daily"
            android:title="@string/daily_statistics" />

        <item android:title="@string/catalogs">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_persons"
                        android:icon="@drawable/ic_person"
                        android:title="@string/persons" />
                    <item
                        android:id="@+id/nav_keywords"
                        android:icon="@drawable/ic_keywords"
                        android:title="@string/keywords" />
                    <item
                        android:id="@+id/nav_sites"
                        android:icon="@drawable/ic_sites"
                        android:title="@string/sites" />
                </group>
            </menu>
        </item>
    </group>
</menu>
