<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="ru.unionfreeart.ufart.view.SettingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/old_password" />

    <EditText
        android:id="@+id/etOldPassword"
        android:layout_width="@dimen/width_field"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/new_password" />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="@dimen/width_field"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password" />

</LinearLayout>
