<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.unionfreearts.ufart.DailyFragment">

    <TextView
        android:id="@+id/tvSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/spSite"
        android:layout_margin="5dp"
        android:paddingTop="10dp"
        android:text="@string/site" />

    <Spinner
        android:id="@+id/spSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvSite" />

    <TextView
        android:id="@+id/tvPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/spPerson"
        android:layout_margin="5dp"
        android:paddingTop="10dp"
        android:text="@string/person" />

    <Spinner
        android:id="@+id/spPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spSite"
        android:layout_toRightOf="@+id/tvPerson" />

    <LinearLayout
        android:id="@+id/pPeriod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spPerson"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/period_from" />

        <EditText
            android:id="@+id/etStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/to" />

        <EditText
            android:id="@+id/etFinishDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="date" />

        <Button
            android:id="@+id/bApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/pPeriod"
        android:background="@color/colorPrimary" />

    <ListView
        android:id="@+id/lvTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/view" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/lvTable"
        android:background="@color/colorPrimary" />

</RelativeLayout>
